[package]
name = "server-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = "1.4"
rocket_cors = "0.6.0-alpha1" 
reqwest = "0.11.9"
rss = "2.0.0"




[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool", "sqlite_pool"]
