[package]
name = "server-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = "1.4"
rocket_cors = "0.6.0-alpha1" 
reqwest = "0.11.9"
rss = "2.0.0"
uuid = {version = "0.8.2", features = ["v4", "v3"]}
thiserror = "1.0.30"
jsonwebtoken = "8.0.1"
time = {version = "0.3.9", features = ["std", "serde"]}
anyhow = "1.0.57"
tokio-tungstenite = "0.17.1"
futures-util = "0.3.21"
serde_json = "1.0.81"
log = "0.4.17"
env_logger = "0.9.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool", "sqlite_pool"]
